--- a/web/style.css
+++ b/web/style.css
@@ -51,8 +51,8 @@ p{
  */
 }
 a{
-	text-decoration: underline;
-	color: black;
+	text-decoration: none;
+	color: beige;
 }
 a:hover{
 	color: grey;
@@ -123,7 +123,7 @@ footer{
 	margin: 30px;
 }
 .date{
-	color: grey;
+	color: gold;
 	font-size: small;
 	padding-right: 20px;
 	float: right;
