Threated cryptocurr more safely

--- a/web/template/index.html
+++ b/web/template/index.html
@@ -88,7 +88,7 @@ footer{	margin-top: 2em;
 		<div class="cs-CZ" style="display: inline-block">
 			<p style="max-width: 550px;"><abbr title="📆{{.NameTmrw}}" style="text-decoration: none"><a href="./web/svatek.html">📆{{.NameToday}}</a></abbr></p>
 			<p style="display:inline-block"><a id="curr" href="./web/cnb-rates.html">💵{{.Currency}}</a></p>
-			<p><a id="cryptocurr" href="https://rate.sx/" target="_blank">🪙{{.CryptoCurrency}}</a></p>
+			<p><a id="cryptocurr" href="https://rate.sx/" target="_blank">🪙1<b style="color: gold;">BTC</b> {{.BtcValue}}$ 1<b style="color:#999;">XMR</b> {{.XmrValue}}$</a></p>
 		</div>
 		<div id="text_forecast">
 			<a href="{{.WttrLink}}" target="_blank">
