--- a/web/template/index.html
+++ b/web/template/index.html
@@ -329,10 +329,6 @@ footer{	margin-top: 2em;
 			}
 			-->
 	</main>
-	<footer style="font-size: x-small">
-		<p>Personal Home Page</p>
-		<p>🌳Marlen, <a href="https://github.com/Solamil/marlen" style="text-decoration: underline" target="_blank">Github</a>
-		</p>
-	</footer>
+	{{template "footer"}}
 </body>
 </html>
