Revert "sat24.com stopped exist"
This reverts commit 9207b95265677d3107d2fab98a8eab6b3749f8e1.

--- a/web/template/index.html
+++ b/web/template/index.html
@@ -107,8 +107,9 @@ footer{	margin-top: 2em;
 			</a>
 		</div>
 		<!-- rain -->
-		<!--<a href='./web/pics/rain.gif' id="link_sat24"><image src='./web/pics/rain.webp' width=360 height=227 loading=lazy></a> -->
+		<!--<a href='./web/pics/rain.gif' id="link_sat24"><image src='./web/pics/rain.webp' width=360 height=227 loading=lazy></a>-->
 		<!-- sun and clouds -->
+		<!--<a href='./web/pics/clouds.gif' ><img src='./web/pics/clouds.webp' loading=lazy width=360 height=227></a>-->
 		<div style=display:inline-block>
 			<a href='https://www.mnhradiste.cz/kamera/mhcam1.jpg' target="_blank" id="panorama_link"><img src='./web/pics/mhcam1.webp' id="panorama_img" loading=lazy width=340 height=200 style="display:inline-block"></a>
 			<!--<a href="http://www.mhpocasi.unas.cz" target="_blank"> <img src="http://www.mhpocasi.unas.cz/webfiles/summary.jpg" width=377 height=243 border=0 title="Amatérská meteostanice Mnichovo Hradiště" alt="Mnichovo Hradiště"></a>-->
@@ -142,6 +143,7 @@ footer{	margin-top: 2em;
 		<a href='./web/pics/forecastPrecip_1days.gif' ><img src='./web/pics/forecastPrecip_1days.webp' loading=lazy width=237 height=290></a>
 	-->
 		<a href='https://kamery.mh2net.cz/img/snap-klub.jpeg' target="_blank" id="snap-klub"><img src='./web/pics/snap-klub.webp' id="snap_klub_img" loading=lazy width=340 height=200></a>
+
 		<div style="display: inline-block;">
 			<a href="./web/traffic.html">
 				<p>40,29 km, směr Chrastava</p>
